# lazyfoo_tutorial

./: .gitignore  CMakeLists.txt  README.md  cmake_snippet.txt
src/: LButton.cpp  LButton.h  LTexture.cpp  LTexture.h  main.cpp  main.cpp.bak
